create windows installer solution, regarding #6.